# gannett-describr

./: .gitignore  README.md  annotated.sqbpro  justfile  pyproject.toml
sql/: overview.sql
src/: annotater.py  annotator.py  driver.py  ed.py  entry_mre.py  entry_mre3.py  log.py  scraper.py  store.py  utils.py
tests/: test_ed.py  test_store.py
