[tool.poetry]
name = "py-ed-desc-scraper"
version = "0.1.0"
description = ""
authors = ["Nick Kocharhook <nick@kocharhook.com>"]
readme = "README.md"
packages = [{include = "py_ed_desc_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.22.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
