[tool.poetry]
name = "gannett-describr"
version = "0.1.0"
description = ""
authors = ["Nick Kocharhook <nick@kocharhook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.22.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"
readchar = "^4.1.0"
undetected-chromedriver = "^3.5.5"
pytest = "^8.2.2"
prompt-toolkit = "^3.0.47"
stableset = "^5.2.1"
requests-cache = "^1.2.1"
requests-ratelimiter = "^0.7.0"


[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
